compiler/mesh-parser/tests/snapshots/parser_tests__pipe_simple.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"x |> foo()\")"
---
SOURCE_FILE@0..10
  PIPE_EXPR@0..10
    NAME_REF@0..1
      IDENT@0..1 "x"
    WHITESPACE@1..2 " "
    PIPE@2..4 "|>"
    WHITESPACE@4..5 " "
    CALL_EXPR@5..10
      NAME_REF@5..8
        IDENT@5..8 "foo"
      ARG_LIST@8..10
        L_PAREN@8..9 "("
        R_PAREN@9..10 ")"
  EOF@10..10 ""
