compiler/mesh-parser/tests/snapshots/parser_tests__pipe_with_calls.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"data |> map(f) |> filter(g)\")"
---
SOURCE_FILE@0..27
  PIPE_EXPR@0..27
    PIPE_EXPR@0..14
      NAME_REF@0..4
        IDENT@0..4 "data"
      WHITESPACE@4..5 " "
      PIPE@5..7 "|>"
      WHITESPACE@7..8 " "
      CALL_EXPR@8..14
        NAME_REF@8..11
          IDENT@8..11 "map"
        ARG_LIST@11..14
          L_PAREN@11..12 "("
          NAME_REF@12..13
            IDENT@12..13 "f"
          R_PAREN@13..14 ")"
    WHITESPACE@14..15 " "
    PIPE@15..17 "|>"
    WHITESPACE@17..18 " "
    CALL_EXPR@18..27
      NAME_REF@18..24
        IDENT@18..24 "filter"
      ARG_LIST@24..27
        L_PAREN@24..25 "("
        NAME_REF@25..26
          IDENT@25..26 "g"
        R_PAREN@26..27 ")"
  EOF@27..27 ""
