compiler/mesh-parser/tests/snapshots/parser_tests__precedence_chain.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"1 + 2 * 3 - 4 / 2\")"
---
SOURCE_FILE@0..17
  BINARY_EXPR@0..17
    BINARY_EXPR@0..9
      LITERAL@0..1
        INT_LITERAL@0..1 "1"
      WHITESPACE@1..2 " "
      PLUS@2..3 "+"
      WHITESPACE@3..4 " "
      BINARY_EXPR@4..9
        LITERAL@4..5
          INT_LITERAL@4..5 "2"
        WHITESPACE@5..6 " "
        STAR@6..7 "*"
        WHITESPACE@7..8 " "
        LITERAL@8..9
          INT_LITERAL@8..9 "3"
    WHITESPACE@9..10 " "
    MINUS@10..11 "-"
    WHITESPACE@11..12 " "
    BINARY_EXPR@12..17
      LITERAL@12..13
        INT_LITERAL@12..13 "4"
      WHITESPACE@13..14 " "
      SLASH@14..15 "/"
      WHITESPACE@15..16 " "
      LITERAL@16..17
        INT_LITERAL@16..17 "2"
  EOF@17..17 ""
