compiler/mesh-parser/tests/snapshots/parser_tests__range_operator.snap
---
source: crates/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"1..10\")"
---
SOURCE_FILE@0..5
  BINARY_EXPR@0..5
    LITERAL@0..1
      INT_LITERAL@0..1 "1"
    DOT_DOT@1..3 ".."
    LITERAL@3..5
      INT_LITERAL@3..5 "10"
  EOF@5..5 ""
