compiler/mesh-parser/tests/snapshots/parser_tests__receive_expr_multiple_arms.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"receive do\\n  1 -> 10\\n  2 -> 20\\nend\")"
---
SOURCE_FILE@0..34
  RECEIVE_EXPR@0..34
    RECEIVE_KW@0..7 "receive"
    WHITESPACE@7..8 " "
    DO_KW@8..10 "do"
    NEWLINE@10..11 "\n"
    WHITESPACE@11..13 "  "
    RECEIVE_ARM@13..20
      LITERAL_PAT@13..14
        INT_LITERAL@13..14 "1"
      WHITESPACE@14..15 " "
      ARROW@15..17 "->"
      WHITESPACE@17..18 " "
      LITERAL@18..20
        INT_LITERAL@18..20 "10"
    NEWLINE@20..21 "\n"
    WHITESPACE@21..23 "  "
    RECEIVE_ARM@23..30
      LITERAL_PAT@23..24
        INT_LITERAL@23..24 "2"
      WHITESPACE@24..25 " "
      ARROW@25..27 "->"
      WHITESPACE@27..28 " "
      LITERAL@28..30
        INT_LITERAL@28..30 "20"
    NEWLINE@30..31 "\n"
    END_KW@31..34 "end"
  EOF@34..34 ""
