compiler/mesh-parser/tests/snapshots/parser_tests__receive_expr_single_arm.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"receive do\\n  x -> x\\nend\")"
---
SOURCE_FILE@0..23
  RECEIVE_EXPR@0..23
    RECEIVE_KW@0..7 "receive"
    WHITESPACE@7..8 " "
    DO_KW@8..10 "do"
    NEWLINE@10..11 "\n"
    WHITESPACE@11..13 "  "
    RECEIVE_ARM@13..19
      IDENT_PAT@13..14
        IDENT@13..14 "x"
      WHITESPACE@14..15 " "
      ARROW@15..17 "->"
      WHITESPACE@17..18 " "
      NAME_REF@18..19
        IDENT@18..19 "x"
    NEWLINE@19..20 "\n"
    END_KW@20..23 "end"
  EOF@23..23 ""
