compiler/mesh-parser/tests/snapshots/parser_tests__receive_expr_with_after.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"receive do\\n  x -> x\\nafter 5000 -> 0\\nend\")"
---
SOURCE_FILE@0..39
  RECEIVE_EXPR@0..39
    RECEIVE_KW@0..7 "receive"
    WHITESPACE@7..8 " "
    DO_KW@8..10 "do"
    NEWLINE@10..11 "\n"
    WHITESPACE@11..13 "  "
    RECEIVE_ARM@13..19
      IDENT_PAT@13..14
        IDENT@13..14 "x"
      WHITESPACE@14..15 " "
      ARROW@15..17 "->"
      WHITESPACE@17..18 " "
      NAME_REF@18..19
        IDENT@18..19 "x"
    NEWLINE@19..20 "\n"
    AFTER_CLAUSE@20..35
      AFTER_KW@20..25 "after"
      WHITESPACE@25..26 " "
      LITERAL@26..30
        INT_LITERAL@26..30 "5000"
      WHITESPACE@30..31 " "
      ARROW@31..33 "->"
      WHITESPACE@33..34 " "
      LITERAL@34..35
        INT_LITERAL@34..35 "0"
    NEWLINE@35..36 "\n"
    END_KW@36..39 "end"
  EOF@39..39 ""
