compiler/mesh-parser/tests/snapshots/parser_tests__return_in_arm_body.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"case o do\n  Some(x) -> x\n  None -> return 0\nend\")"
---
SOURCE_FILE@0..47
  CASE_EXPR@0..47
    CASE_KW@0..4 "case"
    WHITESPACE@4..5 " "
    NAME_REF@5..6
      IDENT@5..6 "o"
    WHITESPACE@6..7 " "
    DO_KW@7..9 "do"
    NEWLINE@9..10 "\n"
    WHITESPACE@10..12 "  "
    MATCH_ARM@12..24
      CONSTRUCTOR_PAT@12..19
        IDENT@12..16 "Some"
        L_PAREN@16..17 "("
        IDENT_PAT@17..18
          IDENT@17..18 "x"
        R_PAREN@18..19 ")"
      WHITESPACE@19..20 " "
      ARROW@20..22 "->"
      WHITESPACE@22..23 " "
      NAME_REF@23..24
        IDENT@23..24 "x"
    NEWLINE@24..25 "\n"
    WHITESPACE@25..27 "  "
    MATCH_ARM@27..43
      IDENT_PAT@27..31
        IDENT@27..31 "None"
      WHITESPACE@31..32 " "
      ARROW@32..34 "->"
      WHITESPACE@34..35 " "
      RETURN_EXPR@35..43
        RETURN_KW@35..41 "return"
        WHITESPACE@41..42 " "
        LITERAL@42..43
          INT_LITERAL@42..43 "0"
    NEWLINE@43..44 "\n"
    END_KW@44..47 "end"
  EOF@47..47 ""
