compiler/mesh-parser/tests/snapshots/parser_tests__return_with_value.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "block_and_debug(\"return x\")"
---
SOURCE_FILE@0..8
  BLOCK@0..8
    RETURN_EXPR@0..8
      RETURN_KW@0..6 "return"
      WHITESPACE@6..7 " "
      NAME_REF@7..8
        IDENT@7..8 "x"
  EOF@8..8 ""
